create auth page, start create home page: catalog

--- a/src/app/globals.scss
+++ b/src/app/globals.scss
@@ -3,10 +3,15 @@
 @tailwind utilities;
 
 :root {
+	@apply text-secondary;
+	background-color: rgb(233, 233, 233);
 }
 
 @media (prefers-color-scheme: dark) {
 	:root {
+		@apply text-white;
+		background-color: rgb(31, 31, 31);
+		--tw-shadow-color: white;
 	}
 }
 
